Add user game player identities
